- fixed light and dark mode styling

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1a1a1a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,6 +18,7 @@ a {
   color: hsl(0, 0%, 100%);
   text-decoration: inherit;
 }
+
 a:hover {
   color: #19a9a0;
 }
@@ -35,7 +36,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,10 +46,9 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #19a9a0;
-}
+} */
+
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,12 +59,29 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+/*   a:hover {
+    color: #19a9a0;
+  } */
   button {
-    background-color: #f9f9f9;
+    background-color: #242424;
   }
+  button:hover {
+  border-color: #19a9a0;
+  color: #19a9a0;
+}
+}
+
+@media (prefers-color-scheme: dark) {
+/*   a:hover {
+    color: #ffffff;
+  } */
+  button {
+    background-color: #19a9a0;
+  }
+  button:hover {
+  border-color: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 0%);
+}
 }
 
 @import "tailwindcss";
